# gdl

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
datasets/: artusi.txt  divina_commedia.txt  pirandello.txt
gaussian_mixture_model/: gaussian_mixture_model.py  notebook.ipynb  univariate.py
gdl-lab/: requirements.txt
gdl-lab/notebooks/: PyTorch.ipynb  vae.ipynb
generative/: __init__.py  autoencoder.py  variational.py
midterm1/: GDL_Midterm_1 - ID 9.ipynb  notebook.ipynb
midterm2/: GDL_Midterm_2 - ID 22.ipynb  GDL_Midterm_2.ipynb
midterm3/: GDL_Midterm_3 - ID 22.ipynb  GDL_Midterm_3.ipynb
models/: __init__.py  autoencoder.py  convolutional.py  encoder.py  ff.py  gaussian_mixture_model.py  markov_chain.py  naive_bayes.py  utils.py
models/probabilistic/: naive_bayes.py
test/: bottleneck_ae.py  denoising_ae.py  gmm_clustering.py  mc_word_generator.py  nb_mushrooms.py  sparse_ae.py  undercomplete_ae.py  variational_ae.py
utils/: datasets.py  losses.py  plot.py  utils.py
