[project]
name = "gdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyqt6>=6.11.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

gdl = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "notebook>=7.5.5",
    "pyqt6>=6.11.0",
]
